--- a/competenze.html
+++ b/competenze.html
@@ -13,189 +13,193 @@
 </head>
 
 <body class="container-bg">
-    <div class="bg-image-cover image-fluid" href="../assets/images"></div>
+    <div class="bg-image-cover image-fluid" href="../assets/images">
 
-    <!-------------------- navbar -------------------->
+        <!-------------------- navbar -------------------->
 
-    <header class="container-flex">
-        <nav class="navbar navbar-expand-lg navbar-bg-color">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                    <ul class="navbar-nav text-right">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="competenze.html">Competenze</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contatti.html">Contatti</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="scarica.html">Scarica</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="name-title">
-                    <h1>Luigina Argentin</h1>
-                    <h2>Sviluppatore Software Inferiore</h2>
-                </div>
-            </div>
-            <div class="card p-3" style="width: 21.5rem; height: 18rem;">
-                <a class="profile-logo" href="../assets/images"></a>
-            </div>
-        </nav>
-    </header>
-
-    <!-------------------- My Skills and Attributes -------------------->
-    <section>
-        <div class="border-frame">
-            <div class="skill-section-title">
+        <header class="container-flex">
+            <nav class="navbar navbar-expand-lg navbar-bg-color">
                 <div class="container-fluid">
-                    <div class="row skill-title-container skill-title">
-                        <h2>Le Mie Competenze e Attributi</h2>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                        <ul class="navbar-nav text-right">
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="competenze.html">Competenze</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contatti.html">Contatti</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="assets/cv/cvitae-Italian.pdf" target="_blank">Scarica</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="name-title">
+                        <h1>Luigina Argentin</h1>
+                        <h2>Sviluppatore Software Inferiore</h2>
+                    </div>
+                </div>
+                <div class="card p-3" style="width: 21.5rem; height: 18rem;">
+                    <a class="profile-logo" href="../assets/images"></a>
+                </div>
+            </nav>
+        </header>
+
+        <!-------------------- My Skills and Attributes -------------------->
+        <section>
+            <div class="border-frame">
+                <div class="skill-section-title">
+                    <div class="container-fluid">
+                        <div class="row skill-title-container skill-title">
+                            <h2>Le Mie Competenze e Attributi</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-section-one">
+                    <div class="container">
+                        <div class="row skill-one-container">
+                            <div class="col-12 col-md-6 skill-one-container skill-one">
+                                <h4>Attualmente in Fronte Fine </h4>
+                                <p>
+                                    Ho lavorato con HTML; CSS; Bootstrap e ho iniziato con JavaScript. Sto ancora
+                                    studiando,
+                                    tuttavia, ho una buona conoscenza di base del processo. <br>
+                                    Anche se ho ancora un viaggio davanti a me, niente mi ostacolerà per raggiungere ciò
+                                    che
+                                    mi ero
+                                    prefissato di realizzare, indipendentemente dal compito.
+                                </p>
+                            </div>
+                            <div class="col col-md-6 skill-two">
+                                <h4>I Miei Attributi Personali</h4>
+                                <ul>
+                                    <li>Fluente in inglese, lettura e scrittura</li>
+                                    <li>Italiano di base e attualmente in fase di apprendimento</li>
+                                    <li>Seconda lingua Afrikaans</li>
+                                    <li>Abile al computer</li>
+                                    <li>Capacità di lavorare come parte di una squadra</li>
+                                    <li>Capacità di lavorare senza supervisione</li>
+                                    <li>Può dare priorità alle attività</li>
+                                    <li>Capacità di far fronte e lavorare sotto pressione</li>
+                                    <li>Capacità di multitasking e gestione di richieste contrastanti</li>
+                                    <li>Cura dei dettagli e Precisione</li>
+                                    <li>Atteggiamento positivo e fiducioso</li>
+                                    <li>Desideroso di apprendere e provare nuove abilità e programmi</li>
+                                    <li>Adattabile a qualsiasi situazione</li>
+                                    <li>Persone persona, cordiale e disponibile</li>
+                                    <li>Puntuali, affidabili e pieni di risorse</li>
+                                    <li>Responsabile, compassionevole</li>
+                                    <li>Proattivo, affidabile e dedicato</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="skill-section-one">
+        </section>
+
+        <!-------------------- Work History -------------------->
+
+        <section class="history-timeline-section">
+            <div class="history-heading">
                 <div class="container">
-                    <div class="row skill-one-container">
-                        <div class="col-12 col-md-6 skill-one-container skill-one">
-                            <h4>Attualmente in Fronte Fine </h4>
-                            <p>
-                                Ho lavorato con HTML; CSS; Bootstrap e ho iniziato con JavaScript. Sto ancora studiando,
-                                tuttavia, ho una buona conoscenza di base del processo. <br>
-                                Anche se ho ancora un viaggio davanti a me, niente mi ostacolerà per raggiungere ciò che
-                                mi ero
-                                prefissato di realizzare, indipendentemente dal compito.
-                            </p>
+                    <div class="row history-heading text-center">
+                        <h2>Storia Del Lavoro
+                        </h2>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="col-12">
+                    <div class="row history-items-container">
+                        <div class="col-md-4 timeline-item-time">
+                            <h4>Data</h4>
+                            <p>"01/1983 - 06/1999"</p>
+                            <p>"09/1999 - 04/2020"</p>
+                            <p>"09/2014 - 02/2020"</p>
+                            <p>"07/2021 - Present"</p>
+                            <p>"07/2022 - Present"</p>
                         </div>
-                        <div class="col col-md-6 skill-two">
-                            <h4>I Miei Attributi Personali</h4>
-                            <ul>
-                                <li>Fluente in inglese, lettura e scrittura</li>
-                                <li>Italiano di base e attualmente in fase di apprendimento</li>
-                                <li>Seconda lingua Afrikaans</li>
-                                <li>Abile al computer</li>
-                                <li>Capacità di lavorare come parte di una squadra</li>
-                                <li>Capacità di lavorare senza supervisione</li>
-                                <li>Può dare priorità alle attività</li>
-                                <li>Capacità di far fronte e lavorare sotto pressione</li>
-                                <li>Capacità di multitasking e gestione di richieste contrastanti</li>
-                                <li>Cura dei dettagli e Precisione</li>
-                                <li>Atteggiamento positivo e fiducioso</li>
-                                <li>Desideroso di apprendere e provare nuove abilità e programmi</li>
-                                <li>Adattabile a qualsiasi situazione</li>
-                                <li>Persone persona, cordiale e disponibile</li>
-                                <li>Puntuali, affidabili e pieni di risorse</li>
-                                <li>Responsabile, compassionevole</li>
-                                <li>Proattivo, affidabile e dedicato</li>
-                            </ul>
+                        <div class="col-md-4">
+                            <div class="timeline-item-com">
+                                <h4>Azienda</h4>
+                                <p>Gina's Beauty Secrets</p>
+                                <p>Little Ducks Swim School</p>
+                                <p>Cherry Tree Montessori</p>
+                                <p>Aquarea Caldogna Vicenza</p>
+                                <p>Agenzia Muraro Viaggi e Vacanza Vicenza</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="timeline-item-pos">
+                                <h4>Posizione</h4>
+                                <p>Salone di bellezza - Titolare</p>
+                                <p>Proprietario della - Istruttore di Nuoto </p>
+                                <p>Direzione Generale</p>
+                                <p>Istruttore di Nuoto</p>
+                                <p>Bus Monitor - USA Scuola-Pullman
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-------------------- Work History -------------------->
+        <!-------------------- Footer -------------------->
 
-    <section class="history-timeline-section">
-        <div class="history-heading">
+        <footer class="main-footer">
             <div class="container">
-                <div class="row history-heading uppercase text-center">
-                    <h2>Storia Del Lavoro
-                    </h2>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row history-items-container">
-                <div class="col-md-4 timeline-item-time">
-                    <h4>Data</h4>
-                    <p>"01/1983 - 06/1999"</p>
-                    <p>"09/1999 - 04/2020"</p>
-                    <p>"09/2014 - 02/2020"</p>
-                    <p>"07/2021 - Present"</p>
-                    <p>"07/2022 - Present"</p>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="timeline-item-com">
-                        <h4>Azienda</h4>
-                        <p>Gina's Beauty Secrets</p>
-                        <p>Little Ducks Swim School</p>
-                        <p>Cherry Tree Montessori</p>
-                        <p>Aquarea Caldogna Vicenza</p>
-                        <p>Agenzia Muraro Viaggi e Vacanza Vicenza</p>
+                <div class="row main-footer-container">
+                    <div class="col-12 col-md-6 main-footer-col-1">
+                        <h4>Più su di Me</h4>
+                        <p>
+                            Sono autodidatta e aspiro a diventare un Full Stack Web Developer. Ho la capacità di
+                            apprendere
+                            e ottenere risultati, non importa quanto grande sia il compito.<br>
+                            Nel mio viaggio fino ad ora, ho coperto HTML, CSS, Bootstrap e recentemente mi sono
+                            avventurato
+                            in JavaScript.<br>
+                            Il mio desiderio di saperne di più è alimentato mentre studio e comprendo il linguaggio di
+                            programmazione, come una sete che non può essere placata. Ad ogni nuovo traguardo ho il
+                            desiderio di saperne di più.
+                        </p>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="timeline-item-pos">
-                        <h4>Posizione</h4>
-                        <p>Salone di bellezza - Titolare</p>
-                        <p>Proprietario della - Istruttore di Nuoto </p>
-                        <p>Direzione Generale</p>
-                        <p>Istruttore di Nuoto</p>
-                        <p>Bus Monitor - USA Scuola-Pullman
+                    <div class="col-md-2 main-footer-col-2 main-footer-contact">
+                        <h4>Seguimi</h4>
+                        <p class="col-md-4">
+                            <a href="#" target="_blank" class="social-link">
+                                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                <span class="sr-only">LinkedIn</span>
+                            </a>
+                        </p>
+                    </div>
+                    <div class="col-md-4 main-footer-col-3">
+                        <h4>Scarica</h4>
+                        <p>
+                            Hai bisogno di una versione stampabile del mio CV?<br>
+                            Scaricalo qui.
+                            <a href="assets/cv/cvitae-Italian.pdf" target="_blank" class="cv-pdf">
+                                <i class="fa fa-download" aria-hidden="true"></i>
+                                <span class="sr-only">Download link.</span>
+                            </a>
                         </p>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <!-------------------- Footer -------------------->
+        </footer>
 
-    <footer class="main-footer">
-        <div class="container">
-            <div class="row main-footer-container">
-                <div class="col-12 col-md-6 main-footer-col-1">
-                    <h4>Più su di Me</h4>
-                    <p>
-                        Sono autodidatta e aspiro a diventare un Full Stack Web Developer. Ho la capacità di
-                        apprendere
-                        e ottenere risultati, non importa quanto grande sia il compito.<br>
-                        Nel mio viaggio fino ad ora, ho coperto HTML, CSS, Bootstrap e recentemente mi sono
-                        avventurato
-                        in JavaScript.<br>
-                        Il mio desiderio di saperne di più è alimentato mentre studio e comprendo il linguaggio
-                        di
-                        programmazione, come una sete che non può essere placata. Ad ogni nuovo traguardo ho il
-                        desiderio di saperne di più.
-                    </p>
-                </div>
-                <div class="col col-md-2 main-footer-col-2 main-footer-contact">
-                    <h4>Seguimi</h4>
-                    <p class="col-md-2">
-                        <a href="#" target="_blank" class="social-link">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">LinkedIn</span>
-                        </a>
-                    </p>
-                </div>
-                <div class="col col-md-4  main-footer-col-3">
-                    <h4>Scarica</h4>
-                    <p>
-                        Hai bisogno di una versione stampabile del mio CV?<br>
-                        Scaricalo qui.
-                        <a href="assets/cv/cv-portfolio.pdf" target="_blank" class="cv-pdf">
-                            <i class="fa fa-download" aria-hidden="true"></i>
-                            <span class="sr-only">Download link.</span>
-                        </a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://kit.fontawesome.com/8d7a70aa9f.js" crossorigin="anonymous"></script>
 
-    <script src="https://kit.fontawesome.com/8d7a70aa9f.js" crossorigin="anonymous"></script>
-
+    </div>
 </body>
 
 </html>
